Setup citations complete

--- a/thesis_skel/thesis_2009_skel.tex
+++ b/thesis_skel/thesis_2009_skel.tex
@@ -33,6 +33,7 @@
 \usepackage{todonotes}
 \usepackage{amsmath}
 \usepackage{placeins}
+\usepackage[numbers, sort&compress]{natbib}
 %------------------------------------------------------------------------------
 % Instead of colouring  links, cites, table of contents etc.
 % put them in a coloured box for the screen version.
