Citations till Angular Reconstruction

--- a/thesis_skel/thesis_refs.bib
+++ b/thesis_skel/thesis_refs.bib
@@ -291,10 +291,14 @@ abstract = {ELVES have been regularly studied since 2013 with the twenty-four te
   year          = {2023}
 }
 @misc{gap_note_2013,
-    title={Search for Ultra-High Energy Neutrinos at the Pierre Auger Observatory},
-    url={https://www.auger.org/gap-notes/download/5-gap-notes-2013/93-gap2013-013},
-    author={Jose Luis Navarro Quirante},
-    year={2012}
+  year         = {2013},
+  url          = {http://hdl.handle.net/10481/26377},
+  organization = {Tesis Univ. Granada. Departamento de Física Teórica y del Cosmos},
+  publisher    = {Universidad de Granada},
+  keywords     = {Física nuclear},
+  keywords     = {Rayos cósmicos},
+  title        = {Search for ultra-high energy neutrinos at the Pierre Auger Observatory},
+  author       = {Navarro Quirante, José Luis}
 }
 @article{Jungman_1996,
    title={Supersymmetric dark matter},
@@ -2496,6 +2500,224 @@ abstract = {The Pierre Auger Cosmic-Ray Observatory uses the earth's atmosphere 
   title = {Python Instrumentation Kit},
   url = {https://github.com/HDembinski/pyik}
 }
+@article{Corcella:2000bw,
+  author        = {Corcella, G. and Knowles, I. G. and Marchesini, G. and Moretti, S. and Odagiri, K. and Richardson, P. and Seymour, M. H. and Webber, B. R.},
+  title         = {{HERWIG 6: An Event generator for hadron emission reactions with interfering gluons (including supersymmetric processes)}},
+  eprint        = {hep-ph/0011363},
+  archiveprefix = {arXiv},
+  reportnumber  = {CAVENDISH-HEP-99-03, CERN-TH-2000-284, RAL-TR-2000-048},
+  doi           = {10.1088/1126-6708/2001/01/010},
+  journal       = {JHEP},
+  volume        = {01},
+  pages         = {010},
+  year          = {2001}
+}
+@article{Ostapchenko:2010vb,
+  author        = {Ostapchenko, Sergey},
+  title         = {{Monte Carlo treatment of hadronic interactions in enhanced Pomeron scheme: I. QGSJET-II model}},
+  eprint        = {1010.1869},
+  archiveprefix = {arXiv},
+  primaryclass  = {hep-ph},
+  doi           = {10.1103/PhysRevD.83.014018},
+  journal       = {Phys. Rev. D},
+  volume        = {83},
+  pages         = {014018},
+  year          = {2011}
+}
+@article{Riehn:2019jet,
+  author        = {Riehn, Felix and Engel, Ralph and Fedynitch, Anatoli and Gaisser, Thomas K. and Stanev, Todor},
+  title         = {{Hadronic interaction model Sibyll 2.3d and extensive air showers}},
+  eprint        = {1912.03300},
+  archiveprefix = {arXiv},
+  primaryclass  = {hep-ph},
+  doi           = {10.1103/PhysRevD.102.063002},
+  journal       = {Phys. Rev. D},
+  volume        = {102},
+  number        = {6},
+  pages         = {063002},
+  year          = {2020}
+}
+@article{Pierog:2013ria,
+  author        = {Pierog, T. and Karpenko, Iu. and Katzy, J. M. and Yatsenko, E. and Werner, K.},
+  title         = {{EPOS LHC: Test of collective hadronization with data measured at the CERN Large Hadron Collider}},
+  eprint        = {1306.0121},
+  archiveprefix = {arXiv},
+  primaryclass  = {hep-ph},
+  reportnumber  = {DESY-13-125},
+  doi           = {10.1103/PhysRevC.92.034906},
+  journal       = {Phys. Rev. C},
+  volume        = {92},
+  number        = {3},
+  pages         = {034906},
+  year          = {2015}
+}
+@article{Ferrari:2005zk,
+  author       = {Ferrari, Alfredo and Sala, Paola R. and Fasso, Alberto and Ranft, Johannes},
+  title        = {{FLUKA: A multi-particle transport code (Program version 2005)}},
+  reportnumber = {CERN-2005-010, SLAC-R-773, INFN-TC-05-11, CERN-2005-10},
+  doi          = {10.2172/877507},
+  month        = {10},
+  year         = {2005}
+}
+@article{Battistoni:2015epi,
+  author  = {Battistoni, Giuseppe and others},
+  title   = {{Overview of the FLUKA code}},
+  doi     = {10.1016/j.anucene.2014.11.007},
+  journal = {Annals Nucl. Energy},
+  volume  = {82},
+  pages   = {10--18},
+  year    = {2015}
+}
+@inproceedings{Nelson:1990sr,
+  author       = {Nelson, W. Ralph and Namito, Yoshihito},
+  title        = {{THE EGS4 CODE SYSTEM: SOLUTION OF gamma-ray AND ELECTRON TRANSPORT PROBLEMS}},
+  reportnumber = {SLAC-PUB-5193},
+  month        = {2},
+  year         = {1990}
+}
+@article{PierreAuger:2012jsu,
+  author        = {Abreu, P. and others},
+  collaboration = {Pierre Auger},
+  title         = {{Description of Atmospheric Conditions at the Pierre Auger Observatory using the Global Data Assimilation System (GDAS)}},
+  eprint        = {1201.2276},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.HE},
+  reportnumber  = {FERMILAB-PUB-12-011-AD-AE-CD-TD},
+  doi           = {10.1016/j.astropartphys.2011.12.002},
+  journal       = {Astropart. Phys.},
+  volume        = {35},
+  pages         = {591--607},
+  year          = {2012}
+}
+@article{Hillas:1997tf,
+  author  = {Hillas, A. M.},
+  editor  = {Rebel, H. and Schatz, G. and Knapp, J.},
+  title   = {{Shower simulation: Lessons from MOCCA}},
+  doi     = {10.1016/S0920-5632(96)00847-X},
+  journal = {Nucl. Phys. B Proc. Suppl.},
+  volume  = {52},
+  pages   = {29--42},
+  year    = {1997}
+}
+@inproceedings{Heck:1998gr,
+  author       = {Heck, D. and Knapp, J.},
+  title        = {{Upgrade of the Monte Carlo code CORSIKA to simulate extensive air showers with energies \ensuremath{>} 10**20-eV}},
+  booktitle    = {{Spring Meeting of the Germany Physical Society (DPG) on Particle Physics (In German)}},
+  reportnumber = {FZKA-6097},
+  month        = {7},
+  year         = {1998}
+}
+@article{Kobal:2001jx,
+  author        = {Kobal, M.},
+  collaboration = {Pierre Auger},
+  title         = {{A thinning method using weight limitation for air-shower simulations}},
+  doi           = {10.1016/S0927-6505(00)00158-4},
+  journal       = {Astropart. Phys.},
+  volume        = {15},
+  pages         = {259--273},
+  year          = {2001}
+}
+@misc{GRID_tech,
+title = {EGI, European Grid Infrastructure.},
+url = {http://www.egi.eu/}
+}
+@article{LozanoBahilo:2012pe,
+  author        = {Lozano Bahilo, Julio},
+  editor        = {Teodorescu, Liliana and Britton, David and Glover, Nigel and Heinrich, Gudrun and Lauret, Jerome and Naumann, Axel and Speer, Thomas and Teixeira-Dias, Pedro},
+  collaboration = {Pierre Auger},
+  title         = {{Mass production of extensive air showers for the Pierre Auger Collaboration using Grid technology}},
+  doi           = {10.1088/1742-6596/368/1/012015},
+  journal       = {J. Phys. Conf. Ser.},
+  volume        = {368},
+  pages         = {012015},
+  year          = {2012}
+}
+@article{Stokes:2011wf,
+  author        = {Stokes, B. T. and Cady, R. and Ivanov, D. and Matthews, J. N. and Thomson, G. B.},
+  title         = {{Dethinning Extensive Air Shower Simulations}},
+  eprint        = {1104.3182},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.IM},
+  doi           = {10.1016/j.astropartphys.2012.03.004},
+  journal       = {Astropart. Phys.},
+  volume        = {35},
+  pages         = {759--766},
+  year          = {2012}
+}
+@article{GEANT4:2002zbu,
+  author        = {Agostinelli, S. and others},
+  collaboration = {GEANT4},
+  title         = {{GEANT4--a simulation toolkit}},
+  reportnumber  = {SLAC-PUB-9350, FERMILAB-PUB-03-339, CERN-IT-2002-003},
+  doi           = {10.1016/S0168-9002(03)01368-8},
+  journal       = {Nucl. Instrum. Meth. A},
+  volume        = {506},
+  pages         = {250--303},
+  year          = {2003}
+}
+@article{Allison:2006ve,
+  author       = {Allison, John and others},
+  title        = {{Geant4 developments and applications}},
+  reportnumber = {SLAC-PUB-11870},
+  doi          = {10.1109/TNS.2006.869826},
+  journal      = {IEEE Trans. Nucl. Sci.},
+  volume       = {53},
+  pages        = {270},
+  year         = {2006}
+}
+@article{Allison:2016lfl,
+  author       = {Allison, J. and others},
+  title        = {{Recent developments in Geant4}},
+  reportnumber = {FERMILAB-PUB-16-447-CD},
+  doi          = {10.1016/j.nima.2016.06.125},
+  journal      = {Nucl. Instrum. Meth. A},
+  volume       = {835},
+  pages        = {186--225},
+  year         = {2016}
+}
+@misc{Veberic:2013suc,
+  author    = {Veberic, Darko},
+  title     = {{Estimation of the Total Signal in Saturated Stations of Pierre Auger Surface Detector}},
+  booktitle = {{33rd International Cosmic Ray Conference}},
+  year      = {2013},
+  pages     = {0633}
+  
+}
+@article{PierreAuger:2020yab,
+  author        = {Aab, Alexander and others},
+  collaboration = {Pierre Auger},
+  title         = {{Reconstruction of events recorded with the surface detector of the Pierre Auger Observatory}},
+  eprint        = {2007.09035},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.IM},
+  reportnumber  = {FERMILAB-PUB-20-487-AD-E-TD},
+  doi           = {10.1088/1748-0221/15/10/P10021},
+  journal       = {JINST},
+  volume        = {15},
+  number        = {10},
+  pages         = {P10021},
+  year          = {2020}
+}
+@misc{gap_bottom_up,
+title = {GAP Note 2004-030 (Auger key protected)},
+author = {C. Medina, X. Bertou}
+}
+@misc{gap_top_down,
+title = {GAP Note 2002-044 (Auger key protected)},
+author =  {Pierre Billoir}
+}
+@article{2017AGUFMAE31A..06C,
+  author    = {{Colalillo}, R. and {Mussa}, R.},
+  title     = {{Observation of high energy radiation in the Surface Detectors of the Pierre Auger Observatory in correspondance with lightning strikes.}},
+  booktitle = {AGU Fall Meeting Abstracts},
+  year      = 2017,
+  volume    = {2017},
+  month     = dec,
+  eid       = {AE31A-06},
+  pages     = {AE31A-06},
+  adsurl    = {https://ui.adsabs.harvard.edu/abs/2017AGUFMAE31A..06C}
+}
+
 @inproceedings{Blobel:2002ax,
   author        = {Blobel, Volker and Kleinwort, Claus},
   title         = {{A New method for the high precision alignment of track
