--- a/thesis_skel/thesis_2009_skel.tex
+++ b/thesis_skel/thesis_2009_skel.tex
@@ -34,6 +34,8 @@
 \usepackage{amsmath}
 \usepackage{placeins}
 \usepackage[numbers, sort&compress]{natbib}
+\usepackage{multirow}
+% \usepackage{lmodern}
 %------------------------------------------------------------------------------
 % Instead of colouring  links, cites, table of contents etc.
 % put them in a coloured box for the screen version.
