Changes till nu detection eff

--- a/thesis_skel/thesis_refs.bib
+++ b/thesis_skel/thesis_refs.bib
@@ -2500,6 +2500,12 @@ abstract = {The Pierre Auger Cosmic-Ray Observatory uses the earth's atmosphere 
   title = {Python Instrumentation Kit},
   url = {https://github.com/HDembinski/pyik}
 }
+@misc{Pivarski2024-za,
+  title     = {Uproot},
+  author    = {Pivarski, Jim and others},
+  publisher = {Zenodo},
+  year      = {2024}
+}
 @article{Corcella:2000bw,
   author        = {Corcella, G. and Knowles, I. G. and Marchesini, G. and Moretti, S. and Odagiri, K. and Richardson, P. and Seymour, M. H. and Webber, B. R.},
   title         = {{HERWIG 6: An Event generator for hadron emission reactions with interfering gluons (including supersymmetric processes)}},
@@ -2717,7 +2723,48 @@ author =  {Pierre Billoir}
   pages     = {AE31A-06},
   adsurl    = {https://ui.adsabs.harvard.edu/abs/2017AGUFMAE31A..06C}
 }
-
+@article{James:1975dr,
+  author       = {James, F. and Roos, M.},
+  title        = {{Minuit: A System for Function Minimization and Analysis of the Parameter Errors and Correlations}},
+  reportnumber = {CERN-DD-75-20},
+  doi          = {10.1016/0010-4655(75)90039-9},
+  journal      = {Comput. Phys. Commun.},
+  volume       = {10},
+  pages        = {343--367},
+  year         = {1975}
+}
+@misc{Fisher_illustrative,
+  title = {An illustrative example of Fisher's linear discriminant},
+  url = {https://sthalles.github.io/fisher-linear-discriminant/}
+}
+@misc{JaimeAlvarezMuniz_conversation,
+  title = {Conversations with Jaime Alvarez-Mu\~niz}
+}
+@misc{scikit_Learn,
+  title = {Scikit-learn: Linear Discriminant Analysis},
+  url = {https://scikit-learn.org/0.16/modules/generated/sklearn.lda.LDA.html}
+}
+@article{PierreAuger:2023xfj,
+  author        = {Abdul Halim, Adila and others},
+  collaboration = {Pierre Auger},
+  title         = {{The Time Evolution of the Surface Detector of the Pierre Auger Observatory}},
+  doi           = {10.22323/1.444.0266},
+  journal       = {PoS},
+  volume        = {ICRC2023},
+  pages         = {266},
+  year          = {2023}
+}
+@article{Sato:2011zze,
+  author        = {Sato, Ricardo},
+  collaboration = {Pierre Auger},
+  title         = {{Long term performance of the surface detectors of the Pierre Auger Observatory}},
+  booktitle     = {{32nd International Cosmic Ray Conference}},
+  doi           = {10.7529/ICRC2011/V03/0952},
+  volume        = {3},
+  pages         = {204},
+  month         = {8},
+  year          = {2011}
+}
 @inproceedings{Blobel:2002ax,
   author        = {Blobel, Volker and Kleinwort, Claus},
   title         = {{A New method for the high precision alignment of track
@@ -2731,12 +2778,6 @@ author =  {Pierre Billoir}
   primaryclass  = {hep-ex},
   reportnumber  = {DESY-02-077},
   slaccitation  = {%%CITATION = HEP-EX/0208021;%%}
-}
-@misc{Pivarski2024-za,
-  title     = {Uproot},
-  author    = {Pivarski, Jim and others},
-  publisher = {Zenodo},
-  year      = 2024
 }
 
 @PhDThesis{Baust:2008,
