--- a/thesis_skel/thesis_setup.tex
+++ b/thesis_skel/thesis_setup.tex
@@ -69,12 +69,13 @@ The T5 fiducial triggers help improve the quality of the showers selected, espec
 \label{sec:Aug_prime}
 AugerPrime~\cite{ANASTASI2022167497} also called Auger Phase 2,  is the ongoing upgrade of the Pierre Auger Observatory to improve its sensitivity and detection capabilities. The upgrade aims to both improve the already present detector systems and also plans to add new components to the Observatory. One of the key aims of the \textit{AugerPrime} upgrade is to improve the estimation of the primary CR mass measured by the SD. This is done by the installation of plastic scintillators(\textit{Surface Scintillator Detectors} (SSDs)~\cite{Cataldi:2021uwd} on top of the WCD tanks. The differing responses of WCDs and the SSDs to the electromagnetic and muonic components help enhance the overall mass sensitivity of the detector for vertical showers. The upgrade also replaces the SD electronics (\textit{unified board} (UB) and SD front-end board) with the \textit{upgraded unified board}(UUB)~\cite{PierreAuger:2021nnx} and adds a \textit{small} PMT (sPMT)~\cite{PierreAuger:2023clx} to the WCD. The UUBs allow for better station level processing power to account for the SSD and also add a faster sampling rate and better timing accuracy for the SD. The sPMT helps increase the dynamic range of the WCD by reducing the saturated signals in the stations closest to the shower axis. The \textit{AugerPrime} upgrade also includes the deployment of plastic scintillators beneath the WCD tanks, the \textit{underground muon detector}(UMD)~\cite{AbdulHalim:2023ZF} as an extension of AMIGA~\cite{PierreAuger:2021fhj} across the SD-750 and SD-433 sub arrays. The UMD is sensitive to the penetrating muon component of the EAS is very useful for extending the lower energy detection range of the Observatory and can also help in photon searches~\cite{PierreAuger:2023nkh}. Deployment of radio antennas on top of each WCD to form \textit{radio detector}(RD)~\cite{Horandel:2023XL} is also a part of \textit{AugerPrime}. This will allow for the measurement of the radio component of the EAS which originates primarily from the electromagnetic component. Such a measurement especially at very inclined zenith angles will allow for an improved mass estimation even for higher zenith angles where the SSD is insensitive. Additionally, increasing the duty cycle of the FD by operating the telescopes during higher night sky brightness periods with reduced PMT gain is also a part of the upgrade. 
 
-In the context of this thesis, the data from the ongoing upgrade and the preceding test array were not used. However, it is important to mention that the higher sampling rate available with the UUBs and the addition of RD could offer a way to improve the current neutrino analysis. The higher sampling rate could help in reducing the effect of the background muons especially at lower zenith angles ($\sim$$60^{\circ}$) whereas the RD in conjunction with WCD could help improve the neutrino detection efficiency for higher zenith angles ($\gtrsim 75^{\circ}$) by improving the T3 efficiency. Also, a general increase in the statistics and continued data taking till the 2030s will help enhance the limits in case of non-detection of cosmogenic neutrinos which have further important implications for the CR spectrum especially for the cutoff as discussed before. The upgrade will also help improve the multi-messenger astronomy capabilities of the Observatory. 
+In the context of this thesis, the data from the ongoing upgrade and the preceding test array were not used. However, it is important to mention that the higher sampling rate available with the UUBs and the addition of RD could offer a way to improve the current neutrino analysis. The higher sampling rate could help in reducing the effect of the background muons especially at lower zenith angles ($\sim 60^{\circ}$) whereas the RD in conjunction with WCD could help improve the neutrino detection efficiency for higher zenith angles ($\gtrsim 75^{\circ}$) by improving the T3 efficiency. Also, a general increase in the statistics and continued data taking till the 2030s will help enhance the limits in case of non-detection of cosmogenic neutrinos which have further important implications for the CR spectrum especially for the cutoff as discussed before. The upgrade will also help improve the multi-messenger astronomy capabilities of the Observatory. 
 
 
-\section{The $\mathrm{\overline{Off}\underline{line}}$ Framework}
-\label{sec:Offline}
-The $\mathrm{\overline{Off}\underline{line}}$ framework~\cite{Argiro:2007qg,PierreAuger:2023cqe} is the C++ based software developed internally by the Pierre Auger Observatory to reconstruct air showers and perform cosmic ray analysis. It can process and reconstruct both air shower simulation outputs from generators such as CORSIKA~\cite{Heck:1998vt}, Aires~\cite{Sciutto:1999jh} etc. and the data recorded at the Observatory. $\mathrm{\overline{Off}\underline{line}}$ aims to standardize basic quantities such as detector response for simulations and important variables inferred from reconstructing an EAS for the entire Collaboration. This helps in providing the collaboration with a homogenous backbone to build physics analysis. It also allows for the physics analysis to be stored and implemented within the framework which helps in leading and optimising productivity. The modular design allows it to be constantly updated for the addition of new functionality and detectors. The framework is available internally on Gitlab to the entire Collaboration with regularly planned public releases. $\mathrm{\overline{Off}\underline{line}}$ consists of three fundamental constituents as shown in fig.~\ref{}. These are summarised below:
+% \section{The $\mathrm{\overline{Off}\underline{line}}$ Framework}
+% \label{sec:Offline}
+
+The $\mathrm{\overline{Off} \underline{line}}$ framework~\cite{Argiro:2007qg,PierreAuger:2023cqe} is the C++ based software developed internally by the Pierre Auger Observatory to reconstruct air showers and perform cosmic ray analysis. It can process and reconstruct both air shower simulation outputs from generators such as CORSIKA~\cite{Heck:1998vt}, Aires~\cite{Sciutto:1999jh} etc. and the data recorded at the Observatory. $\mathrm{\overline{Off} \underline{line}}$ aims to standardize basic quantities such as detector response for simulations and important variables inferred from reconstructing an EAS for the entire Collaboration. This helps in providing the collaboration with a homogenous backbone to build physics analysis. It also allows for the physics analysis to be stored and implemented within the framework which helps in leading and optimising productivity. The modular design allows it to be constantly updated for the addition of new functionality and detectors. The framework is available internally on Gitlab to the entire Collaboration with regularly planned public releases. $\mathrm{\overline{Off} \underline{line}}$ consists of three fundamental constituents as shown in fig.~\ref{}. These are summarised below:
 
 \paragraph*{Detector description:}
 This part acts as an input and consists of information about the individual detector systems of the Pierre Auger Observatory. The information is available to the data processing modules as needed but cannot be modified. The static information such as the layout of the detector is stored in XML files whereas the time dependent information such as atmospheric conditions, hardware changes, calibration information etc. is stored in MySQL databases. For real events this allows for an almost perfect duplication of the conditions and for simulations it offers a vast range of available detector configurations.  
@@ -87,13 +88,7 @@ The type of task performed by the $\mathrm{\overline{Off}\underline{line}}$ is c
 
 \subsection{Advanced Data Summary Tree}
 \label{sec:ADST}
-Advanced Data Summary Trees(ADSTs) are ROOT~\cite{Brun:1997pa} based file structures developed internally within the Pierre Auger Collaboration to store the output of the reconstruction. Additionally, it can also be used to store low level information such as detector description, calibration information and also the configuration of the $\mathrm{\overline{Off}\underline{line}}$ framework used to produce the ADST. ADSTs can be used to browse through individual events via the Eventbrowser and carry out higher level physics analysis. Since the structure is based on ROOT ADSTs can be read through different programming languages. In the context of the ADSTs are interfaced with in C++ directly and using modules such as Python Instrumentation Kit (PyIK)~\cite{HDembinski_pyik} and uproot~\cite{Pivarski2024-za} in Python. 
-
-
-
-
-
-
+Advanced Data Summary Trees(ADSTs) are ROOT~\cite{Brun:1997pa} based file structures developed internally within the Pierre Auger Collaboration to store the output of the reconstruction. Additionally, it can also be used to store low level information such as detector description, calibration information and also the configuration of the $\mathrm{\overline{Off}\underline{line}}$ framework used to produce the ADST. ADSTs can be used to browse through individual events via the Eventbrowser and carry out higher level physics analysis. Since the structure is based on ROOT ADSTs can be read through different programming languages. In the context of this analysis the ADSTs are interfaced within C++ directly and in python using modules such as Python Instrumentation Kit (PyIK)~\cite{HDembinski_pyik} and uproot~\cite{Pivarski2024-za} in Python. 
 
 \begin{figure}[t!]
 \centering
