--- a/thesis_skel/thesis_DGH.tex
+++ b/thesis_skel/thesis_DGH.tex
@@ -53,7 +53,7 @@ This section is thus split into two subsections. The first describing the unblin
 \subsection{20\% test sample}
 \label{subsec:unblind_20}
 
-The Fisher value distribution for the test sample is shown in fig~\ref{}. As it is shown no event passes the Fisher cut in any angular region. However, there are a few events which come very close to the cut line. Five events marked with a red circle were analysed in more detail. Each of them has its own unique reason with only the one with zenith~ being the most interesting. This event has the ID of 66106356. After looking at detailed information about the event it was found out that the accidental station cut used is insufficient. Currently, the  accidental cut(rejection of stations with Totalsignal < 3  VEM) is only applied to the event if there are more than 5 stations in the event. Since for this analysis due to the inclusion of MoPS and ToTd an overall increase in events is expected which also increases the overall number of stations with accidental stations this cut needs to be reduced a bit to take this overall increase into account. Thus, this cut was reduced to apply for events with more than 4 stations. This reduction of the cut decreases the total events passing the analysis cut by ~5\% for both background and signal training samples. The Fisher coefficients and cut changes slightly as shown in table ~\ref{}. After this change in the reconstruction the test sample was obtained again as shown in fig~\ref{}. The other interesting events which have $\mathcal{F}$ values close to the $\mathcal{F_{cut}}$ with their respective ids are tabulated in table~\ref{}. These events were individually evaluated. Some of these () were found to have a bad time residual fit primarily because of mutiple peaks observed in stations triggered by the new triggers. Since, no segmentation algorithm was used sometimes a wrong peak was selected which affected the reconstruction for these events. A future analysis with a corrected segmentation algorithm which is functional for the new triggers MoPS and ToTd is envisaged in the future analysis upgrades. Such events are expected to be limited to less than ~1\% of total events but still require a careful look for future analysis upgrades. A further detailed was also performed for these events where the primary mass composition was extracted via the muon production distributions as mentioned in~\cite{}. Even with large uncertainties these events are most likely due to a light deep primary. For other three events no particular feature was found. 
+The Fisher value distribution for the test sample is shown in fig~\ref{}. As it is shown no event passes the Fisher cut in any angular region. However, there are a few events which come very close to the cut line. Five events marked with a red circle were analysed in more detail. Each of them has its own unique reason with only the one with zenith~ being the most interesting. This event has the ID of 66106356. After looking at detailed information about the event it was found out that the accidental station cut used is insufficient. Currently, the  accidental cut(rejection of stations with Totalsignal < 3  VEM) is only applied to the event if there are more than 5 stations in the event. Since for this analysis due to the inclusion of MoPS and ToTd an overall increase in events is expected which also increases the overall number of stations with accidental stations this cut needs to be reduced a bit to take this overall increase into account. Thus, this cut was reduced to apply for events with more than 4 stations. This reduction of the cut decreases the total events passing the analysis cut by ~5\% for both background and signal training samples. The Fisher coefficients and cut changes slightly as shown in table~\ref{}. After this change in the reconstruction the test sample was obtained again as shown in fig~\ref{}. The other interesting events which have $\mathcal{F}$ values close to the $\mathcal{F_{cut}}$ with their respective ids are tabulated in table~\ref{}. These events were individually evaluated. Some of these () were found to have a bad time residual fit primarily because of mutiple peaks observed in stations triggered by the new triggers. Since, no segmentation algorithm was used sometimes a wrong peak was selected which affected the reconstruction for these events. A future analysis with a corrected segmentation algorithm which is functional for the new triggers MoPS and ToTd is envisaged in the future analysis upgrades. Such events are expected to be limited to less than $\sim$1\% of total events but still require a careful look for future analysis upgrades. A further detailed was also performed for these events where the primary mass composition was extracted via the muon production distributions as mentioned in~\cite{}. Even with large uncertainties these events are most likely due to a light deep primary. For other three events no particular feature was found. 
 
 \subsection{60\% search sample}
 \label{subsec:unblind_60}
